--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.54",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "lukasoppermann/http-status": "^3.1"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
@@ -24,7 +25,10 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "app/Helpers/HttpStatusCodes.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
